# Stock-Sense

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: config.py  db.py  main.py  models.py  schemas.py
backend/app/repositories/: asset_repo.py  portfolio_repo.py  price_repo.py
backend/app/routes/: data.py  metrics.py  optimize.py  portfolios.py
backend/app/services/: ingest.py  metrics.py  optimize.py  prices.py  returns.py
backend/app/utils/: logging.py
backend/scripts/: seed.py
backend/seed/: sample_prices.csv
backend/tests/: test_integration.py  test_metrics.py  test_optimize.py  test_returns.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Chart.tsx  Controls.tsx  Layout.tsx  ResultsCard.tsx  UploadForm.tsx
frontend/src/lib/: api.ts  format.ts  theme.tsx  toast.tsx  useCountUp.ts  validation.ts
frontend/src/pages/: Compare.tsx  Dashboard.tsx  Data.tsx  Explore.tsx  Portfolios.tsx  Upload.tsx
frontend/src/types/: plotly.d.ts
frontend/tests/: controls.test.tsx
