[project]
name = "stocksense-backend"
version = "0.1.0"
description = "StockSense Portfolio Optimizer Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "gunicorn",
    "sqlalchemy>=2.0",
    "psycopg[binary]",
    "alembic",
    "pandas",
    "numpy",
    "scipy",
    "python-dotenv",
    "pydantic>=2.0",
    "pydantic-settings",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "mypy",
    "ruff",
    "black",
    "isort",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
